--- a/index.ipynb
+++ b/index.ipynb
@@ -358,23 +358,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values(['Solta', 'Croatia', 1700, 59])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "cities[0].values()"
+    "###### cities[0].values()"
    ]
   },
   {
